# ESP-IDF

./: mqtt-client.rar
Pczujnik/main/: CMakeLists.txt  Kconfig.projbuild  main.c
Pczujnik/main/include/: ble-write.c  ble-write.h  ble.c  ble.h  bmp280_i2c.c  bmp280_i2c.h  bmp280_i2c_hal.c  bmp280_i2c_hal.h  gaz.c  gaz.h  mqtt-pub.c  read_sensor.c  read_sensor.h
Pmqtt-client/main/: CMakeLists.txt  Kconfig.projbuild  main.c
Pmqtt-client/main/include/: ble-read.c  ble-read.h  mqtt-pub.c
Pmqtt-final/main/: CMakeLists.txt  main.c
Pmqtt-final/main/include/: ble-read.c  ble-read.h  mqtt-pub.c  mqtt-pub.h  mqtt-sub.c
